--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-icons": "^5.2.1",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.26.0",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.7"
   },
   "scripts": {
@@ -29,5 +31,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
