--- a/src/content/footer/index.yaml
+++ b/src/content/footer/index.yaml
@@ -32,10 +32,10 @@ PlatformPolicies:
   - text: '     - Veloxy CareRide TNC Record Retention Policy     '
     link: /veloxy-care-ride-tnc-record-retention-policy
   - text: >-
-      -Driver certifications to acquire within 60 days of driving for Veloxy
+      -Driver certifications to acquire upon driving for Veloxy
       CareRide
     link: >-
-      /driver-certifications-to-acquire-within-60-days-of-driving-for-veloxy-care-ride
+      /driver-certifications-to-acquire-uppn-driving-for-veloxy-care-ride
 disclaimer: The Compassionate Choice For Seniors and Cancer Patients.
 footerBottomLeft:
   text: USA
