--- a/.astro/settings.json
+++ b/.astro/settings.json
@@ -1,5 +1,8 @@
 {
 	"_variables": {
-		"lastUpdateCheck": 1738569417642
+		"lastUpdateCheck": 1742210073499
+	},
+	"devToolbar": {
+		"enabled": false
 	}
 }
