--- a/src/content/footer/index.yaml
+++ b/src/content/footer/index.yaml
@@ -39,8 +39,8 @@ footerBottomLeft:
   text: USA
 contactDetails:
   text: Number
-  number: '+1 (877) 368-3569 '
+  number: '+1 (888) 270-0229 '
 EmailDetails:
   text: Email
-  Email: support@veloxy.care
+  Email: support@veloxycareride.com
 footerBottomRight: []
