delete account in footer

--- a/src/content/footer/index.yaml
+++ b/src/content/footer/index.yaml
@@ -26,6 +26,8 @@ Info:
     link: /community-guidelines
   - text: Transportation Service Rates
     link: /transportation-service-rates
+  - text: Account Deletion  
+    link: /delete-account
 PlatformPolicies:
   - text: '- Zero Tolerance Intoxicating Substances '
     link: /zero-tolerance-intoxicating-substances-policy
